--- a/src/app/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
+++ b/src/app/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
@@ -1,4 +1,10 @@
-<app-main-top-nav *ngIf="vm$ | async; let vm" [config]="vm.navConfig" [fabs]="vm.fabs" [chipRows]="vm.chipRows">
+<app-main-skeleton *ngIf="vm$ | async; let vm" [fabs]="vm.fabs">
+
+    <ng-container navbar>
+        <app-main-top-nav-bar [config]="vm.navConfig" stylingClass="bg-primary">
+        </app-main-top-nav-bar>
+        <app-chips-bar [chips]="vm.chips"></app-chips-bar>
+    </ng-container>
 
     <div fxLayout="column" fxLayoutAlign="start stretch" class="h-100 max-width">
         <cdk-virtual-scroll-viewport *ngIf="vm.timesheets?.length else noContent"
@@ -10,7 +16,7 @@
         </cdk-virtual-scroll-viewport>
     </div> 
 
-</app-main-top-nav>
+</app-main-skeleton>
 
 <ng-template #noContent>
     <span class="text-center w-100">
