--- a/src/app/timesheet-modules/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
+++ b/src/app/timesheet-modules/timesheet-admin/timesheet-admin-user-list/timesheet-admin-user-list.component.html
@@ -1,4 +1,7 @@
-<app-main-top-nav [config]="{title: 'Administrer timer'}">
+<app-main-skeleton>
+
+    <app-main-top-nav-bar navbar [config]="navConfig" stylingClass="bg-primary">
+    </app-main-top-nav-bar>
 
     <div class="p-2 max-width" *ngIf="users$ | async else loading; let users">
         <app-list-card *ngFor="let user of users" startIcon="person" endIcon="chevron_right"
@@ -8,7 +11,7 @@
         <ng-container *ngIf="users.length == 0" [ngTemplateOutlet]="noUsers"></ng-container>
     </div>  
 
-</app-main-top-nav>
+</app-main-skeleton>
 
 <ng-template #noUsers>
     <div class="w-100 text-center mt-2 mat-h3">Fant ingen ansatte!</div>
