--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -3,7 +3,7 @@
   <app-main-top-nav-bar navbar [config]="navConfig" stylingClass="bg-primary">
   </app-main-top-nav-bar>
 
-  <div class="p-2 max-width h-100" fxLayout="column" fxLayoutAlign="space-between stretch">
+  <div class="pl-2 pr-2 pb-2 max-width h-100" fxLayout="column" fxLayoutAlign="space-between stretch">
     <span>
       <app-list-card startIcon='account_circle' (click)="updateProfile()">Oppdater profil
       </app-list-card>
@@ -18,6 +18,6 @@
     </app-list-card>
     
   </div>
-  
+
 </app-main-skeleton>
 
