--- a/src/app/profile/settings/settings.component.html
+++ b/src/app/profile/settings/settings.component.html
@@ -3,7 +3,7 @@
     <app-main-top-nav-bar navbar [config]="navConfig" stylingClass="bg-primary">
     </app-main-top-nav-bar>
 
-    <div class="p-2">
+    <div class="pl-2 pr-2 max-width">
         <app-list-card startIcon='update' (click)="refresh()">Synkroniser manuelt
         </app-list-card>
     
