--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -4,17 +4,18 @@
   </app-main-top-nav-bar>
 
   <div class="pl-2 pr-2 pb-2 max-width h-100" fxLayout="column" fxLayoutAlign="space-between stretch">
+
     <span>
-      <app-list-card startIcon='account_circle' (click)="updateProfile()">Oppdater profil
+      <app-list-card startIcon='account_circle' endIcon="chevron_right" (click)="updateProfile()">Oppdater profil
       </app-list-card>
-      <app-list-card startIcon='vpn_key' (click)="updatePassword()">Oppdater passord
+      <app-list-card startIcon='vpn_key' endIcon="chevron_right" (click)="updatePassword()">Oppdater passord
       </app-list-card>
-      <app-list-card startIcon='settings' [routerLink]="['/profil/innstillinger']">Innstillinger
+      <app-list-card startIcon='settings' endIcon="chevron_right" [routerLink]="['/profil/innstillinger']">Innstillinger
       </app-list-card>
-      <app-list-card appAddToHomeScreen startIcon='get_app'>Legg til app</app-list-card>
+      <app-list-card appAddToHomeScreen startIcon='get_app' endIcon="chevron_right">Legg til app</app-list-card>
     </span>
   
-    <app-list-card startIcon='power_settings_new' (click)="logout()">Logg ut
+    <app-list-card startIcon='power_settings_new' endIcon="chevron_right" (click)="logout()">Logg ut
     </app-list-card>
     
   </div>
