--- a/src/app/mission-modules/mission-list/mission-details/mission-details-view/mission-details-view.component.html
+++ b/src/app/mission-modules/mission-list/mission-details/mission-details-view/mission-details-view.component.html
@@ -23,22 +23,25 @@
 
   </div>
 
-  <app-list-card startIcon="photo_library" endIcon="chevron_right" ellipsisDisabled="true"  
+  <app-list-card startIcon="photo_library" ellipsisDisabled="true"  
     [routerLink]="['/oppdrag', mission?.id, 'bilder']">
     <span [matBadge]="mission.missionImages ? mission.missionImages.length : 0" 
       matBadgeOverlap="false" matBadgeColor="accent">Bilder</span>
+    <mat-icon rightSide>chevron_right</mat-icon>
   </app-list-card>
 
   <app-list-card *ifRole="RolePresets.Internal" startIcon="folder" endIcon="chevron_right" ellipsisDisabled="true"  
     [routerLink]="['/oppdrag', mission?.id, 'dokumenter']">
     <span [matBadge]="mission.missionDocuments ? mission.missionDocuments.length : 0" 
       matBadgeOverlap="false" matBadgeColor="accent">Dokumenter</span>
+    <mat-icon rightSide>chevron_right</mat-icon>
   </app-list-card>
 
   <app-list-card *ifRole="RolePresets.Internal" startIcon="rate_review" endIcon="chevron_right" ellipsisDisabled="true"
     [routerLink]="['/oppdrag', mission?.id, 'notater']">
     <span [matBadge]="mission.missionNotes ? mission.missionNotes.length : 0" 
       matBadgeOverlap="false" matBadgeColor="accent">Notater</span>
+    <mat-icon rightSide>chevron_right</mat-icon>
   </app-list-card>
 
 
