--- a/src/app/users/user-list/user-card/user-card.component.html
+++ b/src/app/users/user-list/user-card/user-card.component.html
@@ -1,15 +1,13 @@
-<div class="app-card mb-1 p-3" fxLayout="row" fxLayoutAlign="space-between center">
-    <mat-icon class="mr-2">{{ (user.role == Roles.Oppdragsgiver) ? 'work' : 'person' }}</mat-icon>
+<app-list-card [startIcon]="(user.role === Roles.Oppdragsgiver) ? 'work' : 'person'">
 
-    <span class="ellipsis mr-auto">
-        <span class="mat-h4">{{ user.lastName }}, {{ user.firstName }}</span><br />
-    </span>
+    {{ user.lastName }}, {{ user.firstName }}
 
-    <span fxLayout="row">
+    <span rightSide fxLayout="row">
         <a *ngIf="user.phoneNumber" class="color-success" mat-icon-button href="tel:{{ user.phoneNumber }}">
             <mat-icon>phone</mat-icon>
         </a>   
         <app-button *ngIf="newPasswordButton && user.role != Roles.Leder" [config]="newPasswordButton"></app-button>
         <app-button *ngIf="editButton && user.role != Roles.Leder" [config]="editButton"></app-button>
     </span>
-</div>
+
+</app-list-card>
