--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -3,7 +3,7 @@
   <app-main-top-nav-bar navbar [config]="navConfig" stylingClass="bg-primary">
   </app-main-top-nav-bar>
 
-  <div class="p-2 max-width" *ngIf="users$ | async else loading; let users;">
+  <div class="pl-2 pr-2 pb-2 max-width" *ngIf="users$ | async else loading; let users;">
 
     <app-user-card *ngFor="let user of users; trackBy: trackByUser" 
       [user]="user"
