--- a/src/app/layout/main-nav/main-side-nav/main-side-nav.component.html
+++ b/src/app/layout/main-nav/main-side-nav/main-side-nav.component.html
@@ -1,5 +1,5 @@
 
-  <mat-toolbar fxLayout="column" fxLayoutAlign="center start" class="bg-primary mat-elevation-z1">
+  <mat-toolbar fxLayout="column" fxLayoutAlign="center start" color="primary">
 
     <ng-container *ngIf="config.isOnline else offlineHeader">
       <span class="mat-small color-success"> Tilkoblet internett </span>
@@ -13,7 +13,7 @@
     </span>
 
   </mat-toolbar>
-
+  <mat-divider></mat-divider>
   <div class="nav-list">
     <ng-container *ngFor="let navButton of config.navigations">
       <app-nav-item 
