add number pipe for decimal bug

--- a/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week/timesheet-mission-bar/timesheet-mission-bar.component.html
+++ b/src/app/timesheet-modules/user-timesheet-list/user-timesheet-week/timesheet-mission-bar/timesheet-mission-bar.component.html
@@ -8,7 +8,7 @@
         (click)="clickBar()" matRipple>
 
         <span class="mat-body-strong">
-            {{ timesheet.totalHours }}t
+            {{ timesheet.totalHours | number : '1.0-1' }}t
         </span>
     </div>
 </ng-container>
