--- a/src/app/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
+++ b/src/app/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
@@ -10,7 +10,12 @@
         <cdk-virtual-scroll-viewport *ngIf="vm.timesheets?.length else noContent"
             itemSize="104" maxBufferPx="800" minBufferPx="800" fxFlex>
             <div class="m-1" *cdkVirtualFor="let timesheet of vm.timesheets | sortByDate : 'startTime'; trackBy: trackByTimesheet">
-                <app-timesheet-card [timesheet]="timesheet" (editClicked)="openTimesheetForm($event)">
+                <app-timesheet-card [timesheet]="timesheet" 
+                    [actionButton]="timesheet.status ? null : { 
+                        icon: 'edit', 
+                        colorClass: 'color-accent',
+                        callback: openTimesheetForm, params: [timesheet.id]
+                    }">
                 </app-timesheet-card>
             </div>
         </cdk-virtual-scroll-viewport>
