add default value to ion date picker

--- a/src/app/timesheet-modules/user-timesheet-form/user-timesheet-form-view/user-timesheet-form-view.component.html
+++ b/src/app/timesheet-modules/user-timesheet-form/user-timesheet-form-view/user-timesheet-form-view.component.html
@@ -23,7 +23,7 @@
     </app-ion-date-picker>
 
     <app-ion-date-picker fxFlex=20 ionFormat="HH:mm" minuteValues="0,15,30,45" placeholder="sluttid"
-      [control]="endTime" [min]="startTime.value">
+      [control]="endTime" [min]="startTime.value" [defaultValue]="endTimeDefault">
     </app-ion-date-picker>
 
   </span>
