--- a/src/app/profile/profile-form/profile-form-view/profile-form-view.component.html
+++ b/src/app/profile/profile-form/profile-form-view/profile-form-view.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="profileForm" [formGroup]="profileForm" fxLayout="column">
+<form *ngIf="profileForm" [formGroup]="profileForm" fxLayout="column" class="m-2">
 
   <mat-form-field>
     <input matInput placeholder="Brukernavn" formControlName="userName">
