--- a/src/app/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
+++ b/src/app/timesheet-modules/user-timesheet-list/user-timesheet-list/user-timesheet-list.component.html
@@ -6,31 +6,12 @@
         <app-chips-bar [chips]="vm.chips"></app-chips-bar>
     </ng-container>
 
-    <div fxLayout="column" fxLayoutAlign="start stretch" class="h-100 max-width">
-        <cdk-virtual-scroll-viewport *ngIf="vm.timesheets?.length else noContent"
-            itemSize="104" maxBufferPx="800" minBufferPx="800" fxFlex>
-            <div class="m-1" *cdkVirtualFor="let timesheet of vm.timesheets | sortByDate : 'startTime'; trackBy: trackByTimesheet">
-                <app-timesheet-card [timesheet]="timesheet" 
-                    [actionButton]="timesheet.status ? null : { 
-                        icon: 'edit', 
-                        colorClass: 'color-accent',
-                        callback: openTimesheetForm, params: [timesheet.id]
-                    }">
-                </app-timesheet-card>
-            </div>
-        </cdk-virtual-scroll-viewport>
-    </div> 
+    <app-user-timesheet-list-view 
+        [timesheets]="vm.timesheets" 
+        (editClicked)="openTimesheetForm($event)"
+        (filterClicked)="openFilterSheet()">
+    </app-user-timesheet-list-view>
 
 </app-main-skeleton>
-
-<ng-template #noContent>
-    <span class="text-center w-100">
-        <p>Finner ingen timer med gitte filtre. </p>
-        <button mat-raised-button color="accent" class="bounceIn" (click)="openFilterSheet()">
-            <mat-icon>filter_list</mat-icon>
-            Åpne filter
-        </button>
-    </span>
-</ng-template>
 
 <router-outlet></router-outlet>
