--- a/src/app/mission-modules/mission-image-list/mission-image-list/mission-image-list.component.html
+++ b/src/app/mission-modules/mission-image-list/mission-image-list/mission-image-list.component.html
@@ -3,7 +3,7 @@
     <app-main-top-nav-bar navbar [config]="vm.navConfig" stylingClass="bg-primary">
     </app-main-top-nav-bar>
 
-    <app-selectable-list #imageList 
+    <app-selectable-list #selectableList 
         *ngIf="vm.images" identifier="id"
         [totalRows]="vm.isXs ? 2 : 4"
         [entities]="vm.images" 
