--- a/src/app/mission-modules/mission-document-list/mission-document-list/mission-document-list.component.html
+++ b/src/app/mission-modules/mission-document-list/mission-document-list/mission-document-list.component.html
@@ -3,7 +3,7 @@
     <app-main-top-nav-bar navbar [config]="vm.navConfig" stylingClass="bg-primary">
     </app-main-top-nav-bar>
 
-    <app-selectable-list #documentList *ngIf="vm.documents" identifier="id"
+    <app-selectable-list #selectableList *ngIf="vm.documents" identifier="id"
         [totalRows]="vm.isXs ? 2 : 4"
         [entities]="vm.documents" 
         [itemTemplate]="documentTemplate"
