change week to weekNr for consistency & fix related bug

--- a/src/app/shared-timesheet/components/timesheet-summary-card-content/timesheet-summary-card-content.component.html
+++ b/src/app/shared-timesheet/components/timesheet-summary-card-content/timesheet-summary-card-content.component.html
@@ -1,7 +1,7 @@
   <div class="p-3" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="16px" *ngIf="summary">
-    <div fxLayout="column" fxLayoutAlign="center center" *ngIf="summary.week; else yearView">
+    <div fxLayout="column" fxLayoutAlign="center center" *ngIf="summary.weekNr; else yearView">
         <span class="mat-body m-0 line-height-100">Uke</span>
-        <span class="mat-headline m-0 line-height-100">{{ summary.week }}</span>
+        <span class="mat-headline m-0 line-height-100">{{ summary.weekNr }}</span>
       </div>
     
       <ng-template #yearView>
